# reactos

./: README.md
base/applications/rapps/: appview.cpp  gui.cpp  installed.cpp
base/applications/rapps/include/: appview.h  gui.h  installed.h
base/applications/taskmgr/: endproc.c
base/setup/reactos/: CMakeLists.txt  drivepage.c  reactos.c
base/system/smss/: smss.c
base/system/winlogon/: winlogon.c
boot/bootdata/: txtsetup.sif
boot/freeldr/freeldr/: freeldr_i386.msvc.lds
dll/: CMakeLists.txt
dll/win32/: CMakeLists.txt
dll/win32/dwmapi/: CMakeLists.txt  dwmapi.c  dwmapi.h  dwmapi.spec
dll/win32/msgina/: gui.c  msgina.rc  resource.h
dll/wince/: CMakeLists.txt
dll/wince/coredll/: CMakeLists.txt  coredll.spec
drivers/filesystems/fastfat/: fsctl.c  shutdown.c  vfat.h
drivers/input/i8042prt/: i8042prt.c  keyboard.c  mouse.c  pnp.c
drivers/setup/blue/: blue.c
ntoskrnl/: ntos.cmake  ntoskrnl.rc
ntoskrnl/ex/: uuid.c
ntoskrnl/fstub/: disksup.c
ntoskrnl/inbv/: inbv.c
ntoskrnl/include/: qrcode.h  resource.h
ntoskrnl/include/internal/: ex.h  ke.h
ntoskrnl/kd/: kdio.c
ntoskrnl/ke/: bug.c  qrcode.c
ntoskrnl/ke/amd64/: except.c
ntoskrnl/ke/i386/: exp.c  irqobj.c  traphdlr.c
ntoskrnl/mm/ARM3/: pool.c
sdk/cmake/: gcc.cmake  msvc.cmake
sdk/include/asm/: asm.inc
sdk/include/crt/msc/: intrin.h
sdk/include/ndk/: kefuncs.h
sdk/include/reactos/: probe.h
sdk/include/xdk/: kefuncs.h
win32ss/gdi/eng/: device.c
win32ss/gdi/ntgdi/: device.c
win32ss/user/ntuser/: desktop.c  display.c  winsta.c
(+18 files in other folders)
